@@ -107,7 +107,7 @@ function myPluginLoader ()
   # "alias" 和"path" 永远不应该被包含到这个数组
   local SCRIPTDIR=(
     'androidenv' 'apply' 'archpkg' 'custom' 'iam' 'ipmi' 'groot' 'less'
-    'logintmux' 'mountcmds' 'profileutils' 'sshenv' 'vman'
+    'logintmux' 'mountcmds' 'profileutils' 'ssh' 'sshenv' 'vman'
   )
 
   for subdir in ${SCRIPTDIR[@]}
